--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -157,22 +157,26 @@ locale: en
 </div>
 
 
-<!-- Aletbar Prev/Next -->
+<!-- Alertbar Prev/Next -->
 <div class="alertbar">
     <div class="container">
         <div class="row prevnextlinks small font-weight-bold">
-            {% if page.previous.url %}
-                <div class="col-md-6 rightborder pl-0">
-                    <!-- <a class="text-dark" href="{{ site.baseurl }}{{ page.previous.url }}">{% if page.previous.image %} <img height="30px" class="mr-1" src="{{site.baseurl}}/{{page.previous.image}}"> {% endif %} {{page.previous.title}}</a> -->
-                    <a class="text-dark" href="{{ site.baseurl }}{{ page.previous.url }}">&#x2190; {% if page.previous.image %} <img height="30px" class="mr-1" src="{% if page.previous.image contains "://" %}{{ page.previous.image }}{% else %} {{site.baseurl}}/{{ page.previous.image}}{% endif %}"> {% endif %} {{page.previous.title}}</a>
-                </div>
-            {% endif %}
-            {% if page.next.url %}
-                <div class="col-md-6 text-right pr-0">
-                    <!-- <a class="text-dark" href="{{ site.baseurl }}{{ page.next.url }}"> {{page.next.title}} {% if page.next.image %} <img height="30px" class="ml-1" src="{{site.baseurl}}/{{page.next.image}}"> {% endif %}</a> -->
-                    <a class="text-dark" href="{{ site.baseurl }}{{ page.next.url }}"> {{page.next.title}} {% if page.next.image %} <img height="30px" class="ml-1" src="{% if page.next.image contains "://" %}{{ page.next.image }}{% else %} {{site.baseurl}}/{{ page.next.image}}{% endif %}"> {% endif %} &#x2192;</a>
-                </div>
-            {% endif %}
+            <div class="col-6 text-left pr-0">
+                {% if page.previous.url %}
+                    <a class="text-dark" href="{{ site.baseurl }}{{ page.previous.url }}">
+                    {% if page.previous.image %} <img class="mr-1 crop-ofp" src="{% if page.previous.image contains '://' %}{{ page.previous.image }}{% else %} {{site.baseurl}}/{{ page.previous.image}}{% endif %}"> {% endif %}
+                    {{page.previous.title | truncate: 50}}
+                    </a>
+                {% endif %}
+            </div>
+            <div class="col-6 text-right pr-0">
+                {% if page.next.url %}
+                    <a class="text-dark" href="{{ site.baseurl }}{{ page.next.url }}">
+                    {{page.next.title | truncate: 50}}
+                    {% if page.next.image %}<img class="ml-1 crop-ofp" src="{% if page.next.image contains '://' %}{{ page.next.image }}{% else %} {{site.baseurl}}/{{ page.next.image}}{% endif %}"> {% endif %}
+                    </a>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
