--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,15 @@
  */
 
 
+.crop-ofp {
+width:  52px;
+height: 52px;
+object-fit: cover;
+/* width:  2.5em; */
+/* height: 2.5em; */
+/* object-position: 25% 25%; */
+}
+
 /* go to the top button */
 button.back-to-top{
     margin: 0 !important;
