Better test url and site name

--- a/_includes/comma-comments.html
+++ b/_includes/comma-comments.html
@@ -70,7 +70,7 @@
 <div class="card border-primary rounded-0 mb-2">
     <div class="d-flex flex-row flex-wrap">
         <div class="card-block">
-            <!-- <img src={{ "https://icotar.com/avatar/" | append: "@id" | append: ".png"}}> -->
+            <img src={{ "https://icotar.com/avatar/" | append: "@id" | append: ".png"}}>
         </div>
         <div class="card-header flex-fill">
             <h5>@name</h5>
