--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -25,9 +25,9 @@
 <!-- the loc variable is passed from default.html through the include statement  -->
 {% assign strings = site.data.translations.strings[loc] %}
 
-<!-- <li class="nav-item">
+<li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/{% if loc != site.default_locale %}{{ loc}}/{% endif %}index.html">Home</a>
-</li> -->
+</li>
 
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/{% if loc != site.default_locale %}{{ loc}}/{% endif %}categories.html">{{ strings.categories }}</a>
