Replace avatars loaded from icotar.com with avatars generated locally with the jdenticon library

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,9 @@
     <!-- download from https://raw.githubusercontent.com/cure53/DOMPurify/refs/heads/main/dist/purify.min.js -->
     <script src="{{site.baseurl}}/assets/js/purify.min.js"></script>
     
+    <!-- Jdenticon avatar generator (https://github.com/dmester/jdenticon) -->
+    <script src="{{site.baseurl}}/assets/js/jdenticon.min.js"></script>
+
     {% include tracking-header.html %}
 
 
