--- a/_includes/comma-comments.html
+++ b/_includes/comma-comments.html
@@ -70,7 +70,10 @@
 <div class="card border-primary rounded-0 mb-2">
     <div class="d-flex flex-row flex-wrap">
         <div class="card-block">
+            {% comment %} 
             <img src={{ "https://icotar.com/avatar/" | append: "@id" | append: ".png"}}>
+            {% endcomment %}
+            <canvas id="jdenticon" width="100%" height="100%" data-jdenticon-value="@id"></canvas>
         </div>
         <div class="card-header flex-fill">
             <h5>@name</h5>
@@ -84,6 +87,7 @@
         </div>
     </div>
 </div>
+
 </template>
 
 
@@ -93,11 +97,28 @@
     // requires the Marked and DOMPurify libraries, which are loaded
     // in the <head> section of default.html
 
+    // jdenticon configuration
+    // custom style: https://jdenticon.com/icon-designer.html?config=ffffffff0141320014411e50
+    window.jdenticon_config = {
+        lightness: {
+            color: [0.20, 0.65],
+            grayscale: [0.30, 0.81]
+        },
+        saturation: {
+            color: 0.50,
+            grayscale: 0.00
+        },
+        backColor: "#fff",
+        replaceMode: "observe"      // trigger a render in dinamically loaded pages
+    };
+
+
     // marked configuration
     marked.use({
         breaks: true,
         gfm: true,
     });
+
 
     function sanitizeComment(comment) {
         // takes a comment written in plain text, markdown or HTML,
